CRUD para autos de usuarios
CRUD completo para los autos que pueda tener un usuario.
